--- a/app/views/index.html
+++ b/app/views/index.html
@@ -17,6 +17,13 @@
   <ul>
     <li>
       <p>
+        <a href="/mvp-v1.4/gp-details">MVP, v1.4</a><br>
+        See <a href="https://github.com/nhsuk/register-with-a-gp-design/blob/master/Register%20interaction%20flow/register-flow-v3.pdf">register-flow-v3</a><br>
+        (Incorporates tweaks and journey changes from lab day on 5th January 2017)
+      </p>
+    </li>
+    <li>
+      <p>
         <a href="/mvp-v1.3/gp-details">MVP, v1.3</a><br>
         See <a href="https://github.com/nhsuk/register-with-a-gp-design/blob/master/Register%20interaction%20flow/register-flow-v2.1.1.pdf">register-flow-v2.1.1</a><br>
         (GP details page included for lab on 5th January 2017)
