Better date examples, to clear up leading zero confusion

--- a/app/views/mvp_v1_4/armed-forces-enlistment-date.html
+++ b/app/views/mvp_v1_4/armed-forces-enlistment-date.html
@@ -31,6 +31,9 @@
           <label for="enlistment-year">Year</label>
           <input autocomplete="off" type="number" id="enlistment-year" name="enlistment-year" value="{{ session.armedforces.enlistment.year }}" class="year" maxlength="4">
         </div>
+        <p class="form-hint">
+          For example: 9 / 7 / 2001
+        </p>
       </div>
     </fieldset>
 
