--- a/app/views/mvp_v1_4/date-of-birth.html
+++ b/app/views/mvp_v1_4/date-of-birth.html
@@ -38,7 +38,7 @@
           <input autocomplete="off" type="number" id="dob-year" name="dob-year" value="{{ session.dob.year }}" class="year" maxlength="4">
         </div>
         <p class="form-hint">
-          For example, 31 / 12 / 1980
+          For example: 9 / 7 / 1980
         </p>
       </div>
     </fieldset>
