Remove 'full' from 'what is your full name' question

--- a/app/views/mvp_v1_4/name.html
+++ b/app/views/mvp_v1_4/name.html
@@ -11,7 +11,7 @@
 
 {% block content %}
   <h1 class="primary">
-    What is your full name?
+    What is your name?
   </h1>
   <form method="post" class="measure">
 
