--- a/app/views/mvp_v1_4/name.html
+++ b/app/views/mvp_v1_4/name.html
@@ -26,15 +26,15 @@
     <fieldset>
       <div class="form-group {% if error %}-errors{% endif %}">
         <label for="first-name">First name</label>
-        <input autocomplete="off" type="text" id="first-name" name="first-name" value="{{ session.name.firstName }}">
+        <input autocomplete="off" type="text" id="first-name" name="first-name" value="{{ first }}">
       </div>
       <div class="form-group">
         <label for="middle-names">Middle names</label>
-        <input autocomplete="off" type="text" id="middle-names" name="middle-names" value="{{ session.name.middleNames }}">
+        <input autocomplete="off" type="text" id="middle-names" name="middle-names" value="{{ middle }}">
       </div>
       <div class="form-group {% if error %}-errors{% endif %}">
         <label for="last-name">Last name</label>
-        <input autocomplete="off" type="text" id="last-name" name="last-name" value="{{ session.name.lastName }}">
+        <input autocomplete="off" type="text" id="last-name" name="last-name" value="{{ last }}">
       </div>
     </fieldset>
 
