--- a/app/views/mvp_v1_4/previous-address.html
+++ b/app/views/mvp_v1_4/previous-address.html
@@ -54,7 +54,7 @@
 
     <div class="form-group -controls">
       <button type="submit" class="button">Continue</button>
-      {% set back = 'previous-name' %}
+      {% set back = 'current-gp-lookup' %}
       {% if session.edit == true %}
         {% set back = 'confirm-details' %}
       {% endif %}
