--- a/app/views/mvp_v1_4/armed-forces.html
+++ b/app/views/mvp_v1_4/armed-forces.html
@@ -56,7 +56,7 @@
 
     <div class="form-group -controls">
       <button type="submit" class="button">Continue</button>
-      {% set back = 'current-gp' %}
+      {% set back = 'contact-telephone' %}
       {% if session.edit == true %}
         {% set back = 'confirm-details' %}
       {% endif %}
