--- a/app/views/mvp_v1_4/home-address-postcode.html
+++ b/app/views/mvp_v1_4/home-address-postcode.html
@@ -54,7 +54,7 @@
 
     <div class="form-group -controls">
       <button type="submit" class="button">Find address</button>
-      {% set back = 'contact-telephone' %}
+      {% set back = 'date-of-birth' %}
       {% if session.edit == true %}
         {% set back = 'confirm-details' %}
       {% endif %}
