--- a/app/views/mvp_v1_4/previous-address-manual.html
+++ b/app/views/mvp_v1_4/previous-address-manual.html
@@ -60,7 +60,7 @@
 
     <div class="form-group -controls">
       <button type="submit" class="button">Continue</button>
-      {% set back = 'previous-address' %}
+      {% set back = 'javascript:window.history.back();' %}
       {% if session.edit == true %}
         {% set back = 'confirm-details' %}
       {% endif %}
