--- a/app/views/mvp_v1_4/previous-name.html
+++ b/app/views/mvp_v1_4/previous-name.html
@@ -53,7 +53,7 @@
 
     <div class="form-group -controls">
       <button type="submit" class="button">Continue</button>
-      {% set back = 'current-gp' %}
+      {% set back = 'javascript:window.history.back();' %}
       {% if session.edit == true %}
         {% set back = 'confirm-details' %}
       {% endif %}
