--- a/app/views/index.html
+++ b/app/views/index.html
@@ -3,7 +3,18 @@
 {% block page_title %}Index : {{serviceName}}{% endblock %}
 
 {% block content %}
-  <h1>Prototypes</h1>
+  <h1>Beta prototypes</h1>
+  <h2>Proposition</h2>
+  <ul>
+    <li>
+      <p>
+        <a href="/private-beta-v1/start">Private beta, v1.0</a><br>
+        (Change to way we're associating ‘current GP’ with ‘address at that GP’)
+      </p>
+    </li>
+  </ul>
+
+  <h1>Alpha prototypes</h1>
   <h2>Vision</h2>
   <ul>
     <li>
