Not 'at' but 'with'

--- a/app/views/private_beta_v1/registered-address.html
+++ b/app/views/private_beta_v1/registered-address.html
@@ -12,7 +12,7 @@
 {% block content %}
 
   <h1 class="primary">
-    Are you registered at {{ session.currentgp.name }} at this address?
+    Are you registered at {{ session.currentgp.name }} with this address?
   </h1>
 
   <form method="post" class="measure">
