--- a/app/views/private_beta_v1/registered-address-result.html
+++ b/app/views/private_beta_v1/registered-address-result.html
@@ -67,7 +67,7 @@
     </fieldset>
 
     <p>
-      <a href="previous-address-manual">I can’t find my address</a>
+      <a href="registered-address-manual">I can’t find my address</a>
     </p>
 
     <div class="form-group -controls">
