Update colour variables file to match NHS.UK

--- a/app/assets/sass/modules/banner/_prototype.scss
+++ b/app/assets/sass/modules/banner/_prototype.scss
@@ -1,6 +1,6 @@
 .prototype-warning {
-  background-color: $dark-grey;
-  color: #d9e1e2;
+  background-color: $grey-1;
+  color: $grey-4;
   font-size: $smallprint;
   line-height: $leading*1.5;
 
