--- a/app/assets/sass/modules/header-local/_header-panel-local.scss
+++ b/app/assets/sass/modules/header-local/_header-panel-local.scss
@@ -1,5 +1,5 @@
 .header-panel {
-  color: $pure-white;
+  color: $white;
   background-color: $nhs-blue;
   padding: $leading*2 $leading $leading $leading;
   margin-bottom: 32px;
