--- a/app/assets/sass/modules/signage/_info.scss
+++ b/app/assets/sass/modules/signage/_info.scss
@@ -13,8 +13,8 @@
 }
 
 .info {
-  border-top: 2px solid $dark-grey;
-  background-color: tint($dark-grey, 90);
+  border-top: 2px solid $grey-1;
+  background-color: tint($grey-1, 90);
 }
 
 .message {
