--- a/app/assets/sass/modules/footer-global/_footer.scss
+++ b/app/assets/sass/modules/footer-global/_footer.scss
@@ -1,5 +1,5 @@
 html {
-  background-color: $pale-grey;
+  background-color: $grey-3;
 }
 
 #global-footer {
@@ -7,8 +7,8 @@ html {
   padding-top: $leading;
   padding-bottom: $leading;
   min-height: 80px;
-  border-top: 1px solid darken($pale-grey, 5);
-  background-color: $pale-grey;
+  border-top: 1px solid darken($grey-3, 5);
+  background-color: $grey-3;
 }
 
 .footer-container {
