--- a/app/assets/sass/variables/_colours.scss
+++ b/app/assets/sass/variables/_colours.scss
@@ -1,75 +1,54 @@
-// NHS Colour palette, from http://www.nhsidentity.nhs.uk/
-$pure-black: #000;
+// Primary NHS blues
+// =================
+$blue: #005eb8;
+$blue-50: #76adda;
+$blue-10: #e6eff8;
+$dark-blue: #003087;
+$bright-blue: #0072ce;
+
+// NHS greyscale
+// =============
+// This is an 5 step greyscale
+// Uses NHS brand colours as a foundation for the first 2 steps
+// and adds three modified greys
 $black: #231f20;
-$pure-white: #fff;
+$grey-1: #425563;
+$grey-2: #768692;
+$grey-3: #aeb7bd;
+$grey-4: #d8dde0;
+$grey-5: #f0f4f5;
+$white: #fff;
 
-// Newer colour palette items
-$blue: #0072c6;
+// Secondary colours
+// =================
+$dark-green: #006747;
+$green: #007f3b; // modified to comply with WCAG contrast with white
+$light-green: #78be20;
 
-$red: #D81E05;
+$red: #da291c;
+$red-50: #e3968a;
+$red-10: #f5e6e4;
 
-$yellow: #F7E214;
+$yellow: #ffb81c;
+$yellow-50: #fada8b;
+$yellow-10: #fdf2d5;
 
-$button-green: #3E8117;
-$light-green: #5bbf21;
-
-$dark-grey: #425563;
-$pale-grey: #d9e1e2;
-
-// Functional colour aliases
-$page-background: $pure-white;
-$text-colour: $black;
-$nhs-blue: $blue;
-$focus-colour: $yellow;
-$error-colour: $red;
-
-/*
-
-these should be a scale of tint: blue00, blue10...blue70....
-i.e. NHS is blue50 as thats a median point, and if we add dark or light tints,
-we can add other blues, named like blue40 (for a lighter blue) or blue60 for a darker blue.
-
-*/
-$dark-blue: #00365D;
-$dark-blue2: #006BBD;
-$light-blue: #1D86D1; /*#0988E7;*/
-$light-blue2: #66B0E8;
-$light-blue3: #A8E8FF; /* #70C1FF */
-$blue2: #0091C9;
-
-$yellow2: #FFB81C;
-$yellow-dark: #cc9316;
-
-$red: #D81E05;
-$red-dark: shade($red, 20%) ;
-$green: #76BD18;
-$green-dark: #6AAB20;
-$feedback-button-green: #417505;
-
-$grey: #e6e6e6;
-$grey-2: rgba(118,134,146,0.2);
-$light-grey:  rgba(66,85,99,.15);
-$hr-white-30: rgba(white, 0.3);
-$opt-out-button-grey: #999999;
-$smallprint-grey: #666666;
-
-$feedback-alert-strip: #FFE799;
 
 // Semantic colour names
-
-$page-colour: #F7FCFF;
-
-  /*
-    colours to test:
-    very light grey:F7F7F7
-    very light NHS blue: EBF6FF
-  */
-
-$header-bottom-margin: $hr-white-30;
-$text-colour: #0b0c0c; //off blacks
+// =====================
+$nhs-blue: $blue;
+$emergency-services-red: $red;
 
 $link-colour: $blue;
-$hover-link-colour: $light-blue2;
-$visited-link-colour: #4c2c92;
-$link-colour-on-blue: $pure-white;
-$visited-link-colour-on-blue: #D4EFFF; /*#5CAEED; /* #0AC0FC; E2EEFB */
+$link-reverse-polarity: $white;
+
+$link-visited-colour: $dark-blue;
+$link-visited-reverse-polarity: $white;
+
+$link-hover-colour: #4c92d9;
+$link-hover-reverse-polarity: #d4efff;
+
+$link-active-colour: #4c92d9;
+$link-active-reverse-polarity: #d4efff;
+
+$focus-colour: $yellow;
