--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -441,7 +441,7 @@ html {
 .error-summary > div {
   float: left;
   border-top: 2px solid #da291c;
-  background-color: #fbeae8;
+  background-color: #f5e6e4;
   padding: 0 32px;
   color: #ad2116;
 }
