--- a/app/views/index.html
+++ b/app/views/index.html
@@ -8,6 +8,12 @@
   <ul>
     <li>
       <p>
+        <a href="/private-beta-v1.1/start">Private beta, v1.1</a><br>
+        Split flow into two sections: ‘details’ and ‘health info’
+      </p>
+    </li>
+    <li>
+      <p>
         <a href="/private-beta-v1/start">Private beta, v1.0</a><br>
         (Change to way we're associating ‘current GP’ with ‘address at that GP’)
       </p>
