--- a/app/assets/sass/modules/typography/_headings.scss
+++ b/app/assets/sass/modules/typography/_headings.scss
@@ -26,7 +26,8 @@ h6 a {
 
 .heading-prefix {
   display: block;
-  font-size: 20px;
+  font-size: $body;
+  font-weight: 400;
   line-height: 1;
   color: tint($black, 50);
 }
