Add simple section labels throughout

--- a/app/assets/sass/app.scss
+++ b/app/assets/sass/app.scss
@@ -34,6 +34,7 @@
 @import "modules/gp-lookup/gp-lookup";
 @import "modules/header-global/header-global";
 @import "modules/header-local/header-panel-local";
+@import "modules/section-indicator/section-indicator";
 @import "modules/signage/info";
 
 @import "modules/nhsid/nhsid";
