--- a/app/views/private_beta_v1_1/any-allergies.html
+++ b/app/views/private_beta_v1_1/any-allergies.html
@@ -11,6 +11,8 @@
 
 {% block content %}
 
+  {% include "_includes/section-indicator-2.html" %}
+
   <h1 class="primary">Do you have any allergies?</h1>
 
   <form method="post" class="measure">
