--- a/app/views/private_beta_v1_1/armed-forces.html
+++ b/app/views/private_beta_v1_1/armed-forces.html
@@ -11,6 +11,8 @@
 
 {% block content %}
 
+  {% include "_includes/section-indicator-1.html" %}
+
   <h1 class="primary">Have you served in the armed forces?</h1>
 
   <form method="post" class="measure">
