--- a/app/views/private_beta_v1_1/registered-address-manual.html
+++ b/app/views/private_beta_v1_1/registered-address-manual.html
@@ -11,6 +11,8 @@
 
 {% block content %}
 
+  {% include "_includes/section-indicator-1.html" %}
+
   <h1 class="primary">What was your address?</h1>
 
   <form method="post" class="measure">
