--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -1019,6 +1019,10 @@ textarea:focus {
   background-color: #337ec6;
 }
 
+.section-indicator {
+  color: #425563;
+}
+
 .signage {
   margin: 32px 0;
 }
