--- a/app/views/private_beta_v1_1/armed-forces-enlistment-date.html
+++ b/app/views/private_beta_v1_1/armed-forces-enlistment-date.html
@@ -11,6 +11,8 @@
 
 {% block content %}
 
+  {% include "_includes/section-indicator-1.html" %}
+
   <h1 class="primary">
     When did you enlist?
   </h1>
