--- a/app/views/private_beta_v1_1/armed-forces-service-number.html
+++ b/app/views/private_beta_v1_1/armed-forces-service-number.html
@@ -11,6 +11,8 @@
 
 {% block content %}
 
+  {% include "_includes/section-indicator-1.html" %}
+
   <h1 class="primary">
     <label for="service-no">What was your service or staff number?</label>
   </h1>
