--- a/app/views/private_beta_v1_1/contact-telephone.html
+++ b/app/views/private_beta_v1_1/contact-telephone.html
@@ -10,6 +10,9 @@
 {% endblock %}
 
 {% block content %}
+
+  {% include "_includes/section-indicator-1.html" %}
+  
   <form method="post" class="measure">
 
     <h1 class="primary">
