--- a/app/views/private_beta_v1_1/current-gp.html
+++ b/app/views/private_beta_v1_1/current-gp.html
@@ -11,6 +11,8 @@
 
 {% block content %}
 
+  {% include "_includes/section-indicator-1.html" %}
+
   <h1 class="primary">Are you already registered with a GP?</h1>
 
   <form method="post">
