--- a/app/views/private_beta_v1_1/current-medication-details.html
+++ b/app/views/private_beta_v1_1/current-medication-details.html
@@ -10,6 +10,9 @@
 {% endblock %}
 
 {% block content %}
+
+  {% include "_includes/section-indicator-2.html" %}
+
   <form method="post">
 
     <h1 class="primary">
