--- a/app/views/private_beta_v1_1/current-medication.html
+++ b/app/views/private_beta_v1_1/current-medication.html
@@ -1,7 +1,7 @@
 {% extends '_layouts/layout.html' %}
 
 {% block page_title %}
-  Your medication :
+  Are you taking any medication? :
   {% if practiceName %}
     Register with {{ practiceName }}
   {% else %}
@@ -10,6 +10,8 @@
 {% endblock %}
 
 {% block content %}
+
+  {% include "_includes/section-indicator-2.html" %}
 
   <h1 class="primary">Are you taking any medication?</h1>
 
