--- a/app/views/private_beta_v1_1/gp-lookup.html
+++ b/app/views/private_beta_v1_1/gp-lookup.html
@@ -1,4 +1,8 @@
-{% extends '_layouts/layout.html' %}
+{% extends '_layouts/gp-lookup-layout.html' %}
+
+{% block content %}
+  {% include "_includes/section-indicator-1.html" %}
+{% endblock %}
 
 {% block body_after %}
 <script>
