--- a/app/views/private_beta_v1_1/home-address-result.html
+++ b/app/views/private_beta_v1_1/home-address-result.html
@@ -11,6 +11,8 @@
 
 {% block content %}
 
+  {% include "_includes/section-indicator-1.html" %}
+
   <form action="select-address" method="post">
     <fieldset>
       <legend class="primary">
