--- a/app/views/private_beta_v1_1/name.html
+++ b/app/views/private_beta_v1_1/name.html
@@ -10,6 +10,9 @@
 {% endblock %}
 
 {% block content %}
+
+  {% include "_includes/section-indicator-1.html" %}
+
   <h1 class="primary">
     What is your name?
   </h1>
