--- a/app/views/private_beta_v1_1/nhs-number-details.html
+++ b/app/views/private_beta_v1_1/nhs-number-details.html
@@ -11,6 +11,8 @@
 
 {% block content %}
 
+  {% include "_includes/section-indicator-1.html" %}
+
   <form method="post">
 
     <h1 class="primary">
