--- a/app/views/private_beta_v1_1/nhs-number.html
+++ b/app/views/private_beta_v1_1/nhs-number.html
@@ -11,6 +11,8 @@
 
 {% block content %}
 
+  {% include "_includes/section-indicator-1.html" %}
+
   <h1 class="primary">Do you know your NHS number?</h1>
 
   <form method="post">
