--- a/app/views/private_beta_v1_1/registered-address.html
+++ b/app/views/private_beta_v1_1/registered-address.html
@@ -11,6 +11,8 @@
 
 {% block content %}
 
+  {% include "_includes/section-indicator-1.html" %}
+
   <h1 class="primary">
     Are you registered at {{ session.currentgp.name }} with this address?
   </h1>
